# osu-rate-gui

./: README.md  package.json  pnpm-lock.yaml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/map/: init.rs  mod.rs  np.rs
src-tauri/src/server/: ws.rs
src/lib/: np.svelte
