[package]
name = "osu-rate-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
gosumemory_helper = "0.1.0"
url = "2.4.1"
futures = "0.3.28"
tungstenite = "0.20.0"
tokio = { version = "1.32.0", features = ["full"] }
spdlog-rs = "0.3.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
